Changed Index Page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,18 @@
-Endpoint
-<br><br>
-<tt>https://github-stats-alpha.vercel.app/api/?username=cachecleanerjeet</tt>
-<br>
-<tt>https://github-stats-alpha.vercel.app/api/?username=cachecleanerjeet&cc=000&tc=fff&sc=fff&bc=fff</tt>
+<!DOCTYPE html>
+
+<html>
+<title>Readme Stats for Github</title>
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="author" content="Tuhin Kanti Pal">
+    <meta http-equiv="refresh" content="0;url=https://github.com/cachecleanerjeet/readme-stats-github/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body style="background-color:black;">
+    <li style="text-align: center;"><span style="color: #ffffff;">Redirecting...</span></li>
+
+
+</body>
+<html>
