--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,19 @@
-<head>
-  <meta
-    http-equiv="refresh"
-    content="0"
-    url="https://tuhinpal.github.io/readme-stats-github/"
-  />
-</head>
+<html>
+  <title>Readme Stats for Github</title>
+
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="author" content="Tuhin Kanti Pal" />
+    <meta
+      http-equiv="refresh"
+      content="3;url=https://tuhinpal.github.io/readme-stats-github/"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+
+  <body>
+    Redirecting to main website...
+  </body>
+
+  <html></html>
+</html>
